--- a/sistema de registro de docentes/añadir_docente.resx
+++ b/sistema de registro de docentes/añadir_docente.resx
@@ -117,4 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="btnAñadirDocenteExcel.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
+  </metadata>
+  <metadata name="btnCancelar.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAAUxJREFUSEu1lk1uwjAQhXMTkj2rrnoWrlE2PVG5A/eJlG3zL6q27ysT6hgnBIhH
+        emLwPL/xjJ04yZy1bZs1TfNe1/VRfq7fE8Dvuu5IDI7Rl5smpVVVHST2Jf9nDnDgyk9t+rxpVTvh0xe6
+        BSUq+77fmUzYVPabiN8hgSVgrha3N7mxsfJnxAdYknElCqSPtGUKpvW/J7ZJQfITOPyJy+Eo3jwt98I0
+        M3rPWQ6SgHr6qgpf5BfOeMEYMWfsCmgnIvEQBQkAISoty3Kr/yQpdBy3jFni4DyANi3K/YCHiyBJXJ+Y
+        x/WR0yIe/VDQxSUJtlCcCk60KG4COXFbFH2Tox9TOZmIqz9opnm+K+R8uME1oArPrwpMpWyUsQwRH4Fp
+        jS8gJYn3uh4s6oUzGNmFu+8G5kyu3DcRN2ySVrT+pe+aJk1+tjBGDI7RA5Ykv6028y9XVueTAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
 </root>
